syntax="proto3";
package pb;
option go_package = "./../;proto";

//protoc -I internal/service/pb internal/service/pb/*.proto --go_out=plugins=grpc:.

message TaskModel {
  // @inject_tag: json:"favorite_id"
  uint32 TaskID=1;
  // @inject_tag: json:"user_id"
  uint32 UserID=2;
  // @inject_tag: json:"status"
  uint32 Status=3;
  // @inject_tag: json:"title"
  string Title=4;
  // @inject_tag: json:"content"
  string Content=5;
  // @inject_tag: json:"start_time"
  uint32 StartTime=6;
  // @inject_tag: json:"end_time"
  uint32 EndTime=7;
}

message TaskRequest{
  uint32 TaskID=1;
  uint32 UserID=2;
  uint32 Status=3;
  string Title=4;
  string Content=5;
  uint32 StartTime=6;
  uint32 EndTime=7;
}


message TasksDetailResponse{
  repeated TaskModel TaskDetail=1;
  uint32 Code=2;
}

message CommonResponse{
  uint32 Code=1;
  string Msg=2;
  string Data=3;
}

service TaskService{
  rpc TaskCreate(TaskRequest) returns(CommonResponse);
  rpc TaskUpdate(TaskRequest) returns(CommonResponse);
  rpc TaskShow(TaskRequest) returns(TasksDetailResponse);
  rpc TaskDelete(TaskRequest) returns(CommonResponse);
}